objects/QIDC__OK_Object_Mapping_ims__c.object
<CustomObject>
    <description>Defines mappings between OneKey entities and SFDC Objects (SObject)</description>
    <fields>
        <fullName>QIDC__OneKey_Entity_ims__c</fullName>
        <description>The name of the OneKey entity type.</description>
        <label>OneKey Entity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Activity ExternalKey</fullName>
                </value>
                <value>
                    <fullName>Activity Indicator</fullName>
                </value>
                <value>
                    <fullName>Activity License</fullName>
                </value>
                <value>
                    <fullName>Activity OpeningHour</fullName>
                </value>
                <value>
                    <fullName>Activity ProfileData</fullName>
                </value>
                <value>
                    <fullName>Activity Qualification</fullName>
                </value>
                <value>
                    <fullName>Activity ReceptionDay</fullName>
                </value>
                <value>
                    <fullName>Activity Relation</fullName>
                </value>
                <value>
                    <fullName>Activity Segmentation</fullName>
                </value>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>Address Affiliation</fullName>
                </value>
                <value>
                    <fullName>Address Segmentation</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Individual Address</fullName>
                </value>
                <value>
                    <fullName>Individual ExternalKey</fullName>
                </value>
                <value>
                    <fullName>Individual Indicator</fullName>
                </value>
                <value>
                    <fullName>Individual License</fullName>
                </value>
                <value>
                    <fullName>Individual ProfileData</fullName>
                </value>
                <value>
                    <fullName>Individual Qualification</fullName>
                </value>
                <value>
                    <fullName>Individual Relation</fullName>
                </value>
                <value>
                    <fullName>Workplace</fullName>
                </value>
                <value>
                    <fullName>Workplace Address</fullName>
                </value>
                <value>
                    <fullName>Workplace ExternalKey</fullName>
                </value>
                <value>
                    <fullName>Workplace Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Workplace License</fullName>
                </value>
                <value>
                    <fullName>Workplace OpeningHour</fullName>
                </value>
                <value>
                    <fullName>Workplace ProfileData</fullName>
                </value>
                <value>
                    <fullName>Workplace Qualification</fullName>
                </value>
                <value>
                    <fullName>Workplace Relation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Entity_ims__c</fullName>
        <description>Stores relationships to other entities.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stores relationships to other entities.</inlineHelpText>
        <label>Parent Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Relation_Type_ims__c</fullName>
        <label>Parent Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ParentId</fullName>
                </value>
                <value>
                    <fullName>One to Many</fullName>
                </value>
                <value>
                    <fullName>Many to Many</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__SObjectType_ims__c</fullName>
        <description>The API Name of the SObject type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>OneKey Object Mapping</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>OneKey Object Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneKey Object Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>